# hourglass

./: .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  INSTALL  README.md  com.github.sgpthomas.hourglass.yml  generate_zone.sh  meson.build
.github/workflows/: ci.yml  gettext.yml  main.yml
data/: Application.css  CMakeLists.txt  com.github.sgpthomas.hourglass-daemon.desktop  com.github.sgpthomas.hourglass-daemon.desktop.in.in  com.github.sgpthomas.hourglass.appdata.xml  com.github.sgpthomas.hourglass.appdata.xml.in  com.github.sgpthomas.hourglass.desktop  com.github.sgpthomas.hourglass.desktop.in  com.github.sgpthomas.hourglass.desktop.in.in  com.github.sgpthomas.hourglass.gresource.xml  com.github.sgpthomas.hourglass.gschema.xml  com.github.sgpthomas.hourglass.metainfo.xml.in  com.github.sgpthomas.hourglass.metainfo.xml.in.in  hourglass-daemon.desktop.in  hourglass.desktop  meson.build  update-icons.sh
data/style/: elements.css  text.css
debian/: changelog  control  copyright
debian/hourglass/etc/xdg/autostart/: hourglass-daemon.desktop
debian/hourglass/usr/share/applications/: hourglass.desktop
debian/hourglass/usr/share/glib-2.0/schemas/: org.pantheon.hourglass.gschema.xml
debian/hourglass/usr/share/locale/bs/LC_MESSAGES/: hourglass.mo
debian/hourglass/usr/share/locale/de/LC_MESSAGES/: hourglass.mo
debian/hourglass/usr/share/locale/es/LC_MESSAGES/: hourglass.mo
debian/hourglass/usr/share/locale/et/LC_MESSAGES/: hourglass.mo
debian/hourglass/usr/share/locale/it/LC_MESSAGES/: hourglass.mo
debian/hourglass/usr/share/locale/pt_BR/LC_MESSAGES/: hourglass.mo
debian/hourglass/usr/share/locale/sv/LC_MESSAGES/: hourglass.mo
debian/hourglass/usr/share/locale/tr/LC_MESSAGES/: hourglass.mo
debian/hourglass/usr/share/locale/zh_TW/LC_MESSAGES/: hourglass.mo
po/: LINGUAS  POTFILES  ast.po  bs.po  ca.po  com.github.sgpthomas.hourglass.pot  de.po  dz.po  en_AU.po  en_GB.po  es.mo  es.po  et.po  fr.po  hourglass.pot  it.po  iu.po  ja.po  kj.po  ky.po  lt.po  meson.build  oj.po  pt.po  pt_BR.po  rn.po  ru.po  ss.po  sv.po  tg.po  tr.po  zu.po
po/extra/: LINGUAS  POTFILES  extra.pot  fr.po  ja.po  meson.build  pt.po  ru.po
schemas/: CMakeLists.txt  com.github.sgpthomas.hourglass.gschema.xml  org.pantheon.hourglass.gschema.xml
src/: CMakeLists.txt  Config.vala  Config.vala.cmake  Config.vala.in  Hourglass.vala  Utils.vala  meson.build
src/Daemon/: AlarmManager.vala  CMakeLists.txt  HourglassDaemon.vala  HourglassServer.vala  NotificationManager.vala  Settings.vala  meson.build
src/Dialogs/: MultiSelectPopover.vala  NewAlarmDialog.vala
src/Objects/: Counter.vala  Region.vala  RegionStore.vala
src/Services/: DBusManager.vala  Settings.vala  StyleManager.vala
src/Views/: AbstractView.vala  AlarmView.vala  StopwatchView.vala  TimerView.vala  WorldClockView.vala
src/Widgets/: Alarm.vala  Alarm.vala~  AlarmTimeWidget.vala  Counter.vala  Spacer.vala  StopwatchTimeWidget.vala  TimeSpinner.vala  TimeWidget.vala  TimerTimeWidget.vala
src/Window/: MainWindow.vala
